now the overscroll weirdness on mobile should be fixed once and for all

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -141,7 +141,10 @@
 
 html {
   box-sizing: border-box;
-  // overflow: hidden;
+}
+
+.sk-app-container {
+  overflow: hidden;
 }
 
 .layout {
